// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RouterLocalizationForm > initializes 1`] = `ShallowWrapper {}`;

exports[`RouterLocalizationForm > should render 1`] = `ShallowWrapper {}`;

exports[`RouterLocalizationForm > updates > should save changes 1`] = `
{
  "cases": [
    {
      "arguments": [
        "Red, r, rolo, maroon",
      ],
      "category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
      "type": "has_any_word",
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
    },
    {
      "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
    },
  ],
  "categories": [
    {
      "exit_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
      "name": "Roooojo!",
      "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
    },
    {
      "name": "",
      "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
    },
    {
      "exit_uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
      "name": "Otro",
      "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
    },
  ],
  "valid": true,
}
`;

exports[`RouterLocalizationForm > updates > should save changes 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "spa",
      [
        {
          "translations": {
            "name": "Roooojo!",
          },
          "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
        },
        {
          "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
        },
        {
          "translations": {
            "name": "Otro",
          },
          "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
        },
        {
          "translations": {
            "arguments": [
              "Red, r, rolo, maroon",
            ],
          },
          "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        },
        {
          "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
